# tearsheet

./: .changelogrc.json  .dockerignore  .env.example  .gitignore  .windsurfrules  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  RELEASE_NOTES.md  app.py  data_loader.py  docker-compose.dev.yml  docker-compose.yml  manage_env.bat  package.json  prd.md  pyproject.toml  render.yaml  requirements.txt  tailwind.config.js
.claude/commands/: add-package.md  add-to-changelog.md  auto-document-agent.md  prepare-release.md  primer.md  serena.md  update-docs.md  update.md
.github/workflows/: ghcr-publish.yml
backend/: .dockerignore  .env.example  Dockerfile  api.py  app.py  pyproject.toml  requirements.txt
backend/config/: production.py
backend/src/core/: data_fetcher.py  portfolio_analyzer.py
backend/src/services/: __init__.py  chart_data_service.py  validation_service.py  visualization_service.py  vnstock_service.py
backend/src/utils/: helpers.py
backend/static/css/: style.css
backend/static/js/: script.js
backend/templates/: analysis_results.html  index.html  ratio_results.html
backend/tests/: __init__.py  test_app.py
backend/tests/unit/: test_portfolio_analyzer.py  (+1 more)
config/: __init__.py  base.py  development.py
docs/architecture/: README.md  component-architecture.md  container-architecture.md  data-architecture.md  system-context.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
ref/: Valuation.py  capital_employed.md  company_profile.py  config.md  dfl.md  dupont.md  effective_tax_rate.py  fin_col.md  foreign.md  get_llm.md  overview.md  process.py  screener.md  screener.py  screener_TA.md  stock_portfolio_optimization.py  stock_price_analysis.py  structure.txt
src/: __init__.py
src/core/: __init__.py
src/models/: __init__.py  portfolio.py
src/services/: vnstock_service.py
src/utils/: __init__.py  constants.py  exceptions.py
static/css/: input.css  style.css
static/js/: script.js
static/react-build/: index.html
static/temp/: analysis_269c17df18.json  analysis_599882106e.json
templates/: base.html  index.html  ratios.html  results.html
tests/: test_app.py  test_data_loader.py
tests/integration/: test_modular_integration.py
(+28 files in other folders)
