[project]
name = "QuantstatsWebApp"
version = "0.1.0"
description = "Vietnam stock portfolio analysis web app using Flask, vnstock, and quantstats."
authors = ["Your Name <your@email.com>"]
dependencies = [
    "flask==3.0.3",
    "vnstock==3.2.6",
    "quantstats==0.0.69",
    "pandas==2.2.2",
    "numpy>=1.26.4,<2.0.0",
    "bootstrap-flask==2.3.3",
    "tenacity==8.2.3",
    "ipython==8.24.0",
    "gunicorn>=23.0.0",
    "dotenv>=0.9.9",
    "flask-cors>=6.0.1",
]
requires-python = "==3.10.11"
